# TeamUP

./: .gitignore  AGENTS.md  ENDPOINTS.md  HELP.md  LICENSE  Makefile  README.md  SETUP.md  opencode.json  pom.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: epic.md  feature-or-epic.md  feature.md  task.md  user-story.md
.github/workflows/: ci.yml  merge-dependabot-prs.yml
.opencode/commands/: explain.md
.opencode/instructions/: backend.md  frontend.md
curl-testing/: test.ipynb
curl-testing/live-testing/: README.md  common.sh  employee-test.sh  learning-material-test.sh  run-all-tests.sh
curl-testing/live-testing/responses/: GET_API_request_20260317_145209.json  GET_API_request_20260317_145430.json  POST_API_request_20260317_145030.json  POST_API_request_20260317_145130.json  POST_API_request_20260317_145209.json  POST_API_request_20260317_145322.json  POST_API_request_20260317_145430.json  (+3 more)
curl-testing/test-utils/: person.sh  task.sh  utils.sh
db-schema/: schema.sql  seed.sql  test.sql
docs/: SPOTLESS.md  TEST.md  spring-reference.md
docs/dependencies/: ANNOTATIONS.md  DEPENDENCIES.md  LIBRARIES.md
python-testing/: .env.example  .gitignore  README.md  cli.py  pyproject.toml
python-testing/notebooks/: 01_getting_started.ipynb  02_employee_crud.ipynb  03_learning_material_crud.ipynb  04_advanced_examples.ipynb
python-testing/teamup/: __init__.py  config.py  database.py  models.py  repository.py
python-testing/tests/: conftest.py  factories.py  test_complete_workflow.py  test_database.py  test_employee.py  test_learning_material.py
(+25 files in other folders)
